[package]
name = "primesieve_sys"
version = "0.1.0"
authors = ["hacatu"]
edition = "2024"
description = "Wrapper for Primesieve C library"
repository = "https://github.com/hacatu/primesieve_sys"
license = "BSD-2-Clause"
keywords = ["number-theory", "math", "prime"]
categories = ["api-bindings", "external-ffi-bindings", "mathematics"]
links = "primesieve"

[lib]
name = "primesieve_sys"
path = "src/primesieve_sys.rs"

[dependencies]
libc = "0.2.154"

